app/styles/styles.scss
@import 'variables';
@import 'main';
@import 'normalize';

html,body{
	font-family:'Lato',sans-serif;
	background:#EEE;
}
/* STRUCTURE */
#page-header{
    background:#EEE;
    color:#FFF;
    height:40px;
    padding:10px 0;
    position:static;
    top:0;
    left:0;
    right:0;
}
#page-header img#header-logo{
	display:inline;
	vertical-align:middle;
	margin-left:20px;
}
#page-header ul{
    list-style:none;
    display:inline;
    line-height:35px;
    margin:10px;
    padding:0;
}
#page-header ul li{
    display:inline;
}
#page-header ul li a{
	text-decoration:none;
	color:#000;
	margin:0 5px;
}
#page-header ul li a:hover{
	text-decoration:underline;
}
/* SCORECARD TABLE */
#scorecard-grid-wrapper{
    position:fixed;
    top:70px;
    left:10px;
    right:10px;
    bottom:10px;
    overflow:scroll;
    background:#FFF;
    border:#DDD solid 1px;
    box-sizing:border-box;
}
.cell-body{
    position:relative;
    display:block;
    width:100px;
    height:30px;
    padding:5px 10px;
    box-sizing:border-box;
}

/* Header */
#scorecard-grid-header{
    background:#FFF;
    border-bottom:#DDD solid 1px;
    position:absolute;
    top:0;
    left:0;
    height:$headerHeight;
    z-index:3;
}
#scorecard-grid-header ul, #scorecard-grid-header ul li{
    list-style:none;
    margin:0;
    padding:0;
}
#scorecard-grid-header > ul{
    margin-left:$sidebarWidth;
}
#scorecard-grid-header > ul > li{
    float:left;
    border-color:#AAA;
    border-style:solid;
    border-width:0 0 0 1px;
    margin:0;
    padding:0;
}
#scorecard-grid-header > ul > li > ul{
    display:inline;
}
#scorecard-grid-header > ul > li > ul > li{
    float:left;
    width:$cellWidth;
    border-left:#DDD solid 1px;
    box-sizing:border-box;
    margin:0;
    padding:0;
}
#scorecard-grid-header > ul > li > ul > li:nth-child(1){
    border:none;
}
#scorecard-grid-header #table-title{
    background:#FFF;
    border-right:#DDD solid 1px;
    position:absolute;
    top:0;
    left:0;
    width:$sidebarWidth;
    height:$headerHeight;
    margin:0;
    z-index:3;
}
#scorecard-grid-header #table-title span{
    background:none;
    width:$sidebarWidth;
    margin-top:10px;
    font-size:1.25em;
    text-align:center;
}
#scorecard-grid-header .cell-body{
    display:block;
}
#scorecard-grid-header > ul > li span{
	width:100%;
}
#scorecard-grid-header > ul > li > ul > li .cell-body:hover{
	background:#EEE;
}
#scorecard-grid-header .cell-body p.cell-text{
    white-space:nowrap;
    margin:0;
    overflow:hidden;
}

/* Sidebar */
#scorecard-grid-sidebar{
    background:#FFF;
    border-right:#DDD solid 1px;
    position:absolute;
    top:$headerHeight;
    left:0;
    width:$sidebarWidth;
    z-index:2;
}
#scorecard-grid-sidebar ul, #scorecard-grid-sidebar li{
    list-style:none;
    margin:0;
    padding:0;
}
#scorecard-grid-sidebar .scorecard-grid-sidebar-supertopic{
    position:relative;
    border-color:#AAA;
    border-style:solid;
    border-width:1px 0 0;
}
#scorecard-grid-sidebar > ul > li > span{
    position:absolute;
    top:-20px;
    left:0;
    width:$cellWidth;
    transform:rotate(90deg);
    transform-origin:0% 100%;
}
#scorecard-grid-sidebar .scorecard-grid-sidebar-topic{
    width:$cellWidth*2;
    margin-left:60px;
}
#scorecard-grid-sidebar .scorecard-grid-sidebar-topic:nth-child(1){
    width:$cellWidth*2;
    margin-left:60px;
    border-top:none;
}
#scorecard-grid-sidebar .scorecard-grid-sidebar-topic > span{
    border-top:#DDD solid 1px;
    box-sizing:border-box;
}
#scorecard-grid-sidebar .scorecard-grid-sidebar-topic:nth-child(1) > span{
    border-top:none;
}
#scorecard-grid-sidebar .scorecard-grid-sidebar-subtopic .cell-body{
	padding-left:30px;
	color:#666;
	font-size:.75em;
}
#scorecard-grid-sidebar > ul > li > ul > li .cell-body{
    width:$cellWidthX2;
}
#scorecard-grid-sidebar > ul > li > ul > li .cell-body:hover{
	background:#EEE;	
}
#scorecard-grid-sidebar > ul > li > ul > li .cell-body p.cell-text{
    margin:0;
    white-space:nowrap;
    overflow:hidden;
}

/* Body */
#scorecard-grid-body{
    position:absolute;
    top:$headerHeight;
    left:$sidebarWidth;

	ul{
		display:inline;
	}
	ul, li{
	    list-style:none;
	    margin:0;
	    padding:0;
	}
	// Super-Topic
	.scorecard-grid-supertopic{
	    display:block;
	    border-color:#FFF;
	    border-style:solid;
	    border-width:1px 0 0;
	}
	// Topic
	.scorecard-grid-supertopic:nth-child(1) .scorecard-grid-topic:nth-child(1){
		border-top:none;
	}
	.scorecard-grid-topics{
		.scorecard-grid-topic{
		    float:left;
		}
		.scorecard-grid-topic:nth-child(1){
			border-top:#FFF solid 1px;
		}
	}
	// Super-Subset
	.scorecard-grid-supersubset{
	    float:left;
	    border-color:#FFF;
	    border-style:solid;
	    border-width:0 0 0 1px;
	}
	// Subset
	.scorecard-grid-subset{
	    float:left;
	}
	// Sub-Topic
	.scorecard-grid-subtopics{
	    border-color:#DDD;
	    border-style:solid;
	    border-width:1px 0;
	    background:#DDD;

		.scorecard-grid-subtopic{
		    float:left;
		    border:none;
	    }
	}
	.scorecard-grid-subtopic-supersubset{
	    float:left;
	    border-color:#FFF;
	    border-style:solid;
	    border-width:0 0 0 1px;
	/*    background:#DDD; */
	}
	.scorecard-grid-subtopic-subset{
		float:left;
	    width:$cellWidth;
	    height:$cellHeight;
	}
}
// Heat Values
.heat-0{
    background:hsla($heatmapHue,100%,50%,0);
    .scorecard-grid-value{
	    color:rgba(0,0,0,.5);
    }
}
.heat-1{
    background:hsla($heatmapHue,100%,50%,.2);
    .scorecard-grid-value{
	    color:rgba(0,0,0,.6);
    }
}
.heat-2{
    background:hsla($heatmapHue,100%,50%,.4);
    .scorecard-grid-value{
	    color:rgba(0,0,0,.7);
    }
}
.heat-3{
    background:hsla($heatmapHue,100%,50%,.6);
    .scorecard-grid-value{
	    color:rgba(0,0,0,.8);
    }
}
.heat-4{
    background:hsla($heatmapHue,100%,50%,.8);
    .scorecard-grid-value{
	    color:rgba(0,0,0,.9);
    }
}
/* ... */

